--- a/mail/assets/css/style.css
+++ b/mail/assets/css/style.css
@@ -56,6 +56,7 @@ input {
   text-align: center;
   font-size: 1.125rem;
   width: 100%;
+  transition: transform 0.3s;
 }
 
 input::placeholder {
@@ -65,6 +66,8 @@ input::placeholder {
 
 input:focus-visible {
   outline: 0;
+  transform: scale(1.1);
+  animation: scale 0.5s;
 }
 
 button {
@@ -74,5 +77,23 @@ button {
   padding: 0.5rem 1rem;
   color: #ffffff;
   font-size: 1.125rem;
+  transition: transform 0.3s;
+}
+
+button:hover {
   cursor: pointer;
+  transform: scale(1.1);
+  animation: scale 0.5s;
+}
+
+@keyframes scale {
+  0% {
+    transform: scale(1);
+  }
+  65% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1.1);
+  }
 }
